major updates, added a handsome script to the home.html and made changes in server.py script to make it more understandable, tells the ip addersses of the users with a generated website but if the user is using windows, it tells the website in the terms of localhost:8080/home.html

--- a/home.html
+++ b/home.html
@@ -1,6 +1,27 @@
 <html>
 <head><title>Home</title></head>
 <body>
-    <h1>This is home, this is incredible !</h1>
-    <a href = "https://www.camel-cases.blogspot.com">link</a>
+    <div id = "text"><h1>This is home, this is incredible !</h1></div>
+    <div id = "link">
+    <a href = "http://www.camel-cases.blogspot.com">My Website</a>
+    </div>
+    <script>
+        var text = document.getElementById("text");
+        var body = document.body;
+        body.textAlign = "center";
+        var count = 0;
+        window.setInterval(changeColor, 4000)
+        function changeColor() {
+            count += 1;
+            if (count % 2 == 0) {
+                body.style.backgroundColor = "red";
+                body.style.color = "yellow";
+                text.innerHTML = "<h1>Hello, World!</h1>";
+            } else {
+                body.style.backgroundColor = "yellow";
+                body.style.color = "black";
+                text.innerHTML = "<h1>Hello, Client!</h1>";
+            }
+        }
+    </script>
 </body>
