prevented errors from directly reaching user via try except statements, now provides brief description of the failed attempt and suggests users to solve it

--- a/home.html
+++ b/home.html
@@ -8,7 +8,8 @@
     <script>
         var text = document.getElementById("text");
         var body = document.body;
-        body.textAlign = "center";
+        body.style.textAlign = "center";
+        body.style.fontSize = "70px";
         var count = 0;
         window.setInterval(changeColor, 4000)
         function changeColor() {
