--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Home</title></head>
 <body>
-    <div id = "text"><h1>This is home, this is incredible !</h1></div>
+    <div id = "text"><h1>This is home, This is incredible !</h1></div>
     <div id = "link">
     <a href = "http://www.camel-cases.blogspot.com">My Website</a>
     </div>
