--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
 <head><title>Home</title></head>
 <body>
-    <div id = "text"><h1>This is home, This is incredible !</h1></div>
+    <div id = "text"><h1>Sample html page</h1></div>
     <div id = "link">
-    <a href = "http://www.camel-cases.blogspot.com">My Website</a>
     </div>
     <script>
         var text = document.getElementById("text");
